--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 html,body {
   
-  background: url('./MyComponents/im.jpg') no-repeat center center;
+  background: url('./MyComponents/toroto.jpeg') no-repeat center center;
   background-size: cover;
   padding: 0;
   height: 100%; 
