--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ code {
 .glitch-text {
   position: relative;
   display: inline-block;
-  color: #fff;
+  color: #000;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 2px;
